--- a/components/service-control-policies.yaml
+++ b/components/service-control-policies.yaml
@@ -69,7 +69,17 @@ Resources:
                         }
                     },
                     "Action": [
-                        "iam:*"
+                        "iam:AttachRolePolicy",
+                        "iam:CreateRole",
+                        "iam:DeleteRole",
+                        "iam:DeleteRolePermissionsBoundary",
+                        "iam:DeleteRolePolicy",
+                        "iam:DetachRolePolicy",
+                        "iam:PutRolePermissionsBoundary",
+                        "iam:PutRolePolicy",
+                        "iam:UpdateAssumeRolePolicy",
+                        "iam:UpdateRole",
+                        "iam:UpdateRoleDescription"
                     ],
                     "Resource": [
                         "arn:aws:iam::*:role/service-role/AWSBackupDefaultServiceRole"
