--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -425,7 +425,7 @@ Resources:
             Accounts:
               - !Ref AWS::AccountId
           Regions:
-            - eu-west-1
+            - eu-west-1 # this is fixed to eu-west-1 until SES supports receive more globally (see #23)
       StackSetName: !Sub ${AWS::StackName}-ReceiveStack
       TemplateBody: !Sub |
         Resources:
