fix: make rootmail stackset exec role only assumable from admin role
not the entire account

--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -740,7 +740,7 @@ Resources:
           - Effect: Allow
             Principal:
               AWS:
-                - !Sub "${AWS::AccountId}"
+                - !GetAtt StackSetAdministrationRole.Arn
             Action:
               - sts:AssumeRole
       Path: /
