--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -143,7 +143,7 @@ Resources:
                         Action: dynamodb:TagResource
                         Resource: '*'
 
-          AWSBackupDefaultServiceRole: # TODO: Integrity Protection
+          AWSBackupDefaultServiceRole:
             Type: AWS::IAM::Role
             Properties:
               RoleName: AWSBackupDefaultServiceRole
