--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -229,15 +229,13 @@ Resources:
     Type: AWS::CloudFormation::CustomResource
     Properties:
       ServiceToken: !GetAtt BackupTagRemediationPublicCustomResource.Arn
+      DocumentName: !Ref BackupTagRemediation
 
   BackupTagRemediationPublicCustomResource:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
       Runtime: python3.7
-      Environment:
-        Variables:
-          DOCUMENT_NAME: !Ref BackupTagRemediation
       Policies:
         - Version: 2012-10-17
           Statement:
@@ -270,17 +268,21 @@ Resources:
 
         @exception_handling
         def handler(event, context):
+            RequestType = event["RequestType"]
             PhysicalResourceId = event.get("PhysicalResourceId")
+            Properties = event["ResourceProperties"]
+            DocumentName = Properties["DocumentName"]
 
             id = PhysicalResourceId
 
             data = {}
 
-            ssm.modify_document_permission(
-              Name=os.environ['DOCUMENT_NAME'],
-              PermissionType='Share',
-              AccountIdsToAdd=['All']
-            )
+            if RequestType == CREATE or RequestType == UPDATE:
+                ssm.modify_document_permission(
+                  Name=DocumentName,
+                  PermissionType='Share',
+                  AccountIdsToAdd=['All']
+                )
 
             cfnresponse.send(event, context, cfnresponse.SUCCESS, data, id)
 
