Revert "Merge pull request #113 from superwerker/stackset-least-privilege"
This reverts commit 030e923a7bb8b61283fe8c03f001b8673a3efb98, reversing
changes made to e8772c369a8c812d8adc371fec8f58cccd659d14.

--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -740,7 +740,7 @@ Resources:
           - Effect: Allow
             Principal:
               AWS:
-                - !GetAtt StackSetAdministrationRole.Arn
+                - !Sub "${AWS::AccountId}"
             Action:
               - sts:AssumeRole
       Path: /
