remove efs fallout

--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -471,8 +471,7 @@ Resources:
                     },
                     "enforced_for": {
                         "@@assign": [
-                            "dynamodb:table",
-                            "elasticfilesystem:file-system"
+                            "dynamodb:table"
                         ]
                     }
                 }
