--- a/components/backup.yaml
+++ b/components/backup.yaml
@@ -471,7 +471,8 @@ Resources:
                     },
                     "enforced_for": {
                         "@@assign": [
-                            "dynamodb:table"
+                            "dynamodb:table",
+                            "ec2:volume"
                         ]
                     }
                 }
